--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 				text-align: center;
 				width: 100%;
 				opacity: 0.5;
+				padding: 0 10px;
+				box-sizing: border-box;
 			}
 		</style>
 	</head>
@@ -39,7 +41,7 @@
 			<h1>来疯数据</h1>
 			<input placeholder="请输入来疯号" id="u_id" />
 			<button onclick="toXHL()">跳转小葫芦查询</button>
-			<p>网页由·1990·整理，数据来自小葫芦</p>
+			<p>声明：该网页仅提供大家方便跳转到小葫芦，查询来疯数据，不可用于商业用途。</p>
 		</div>
 		
 		<script type="text/javascript">
