--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<h1>来疯数据</h1>
 			<input placeholder="请输入来疯号" id="u_id" />
 			<button onclick="toXHL()">跳转小葫芦查询</button>
-			<p>声明：该网页仅提供大家方便跳转到小葫芦，查询来疯数据，不可用于商业用途。</p>
+			<p>声明：该网页仅提供大家方便跳转到小葫芦，查询来疯数据。不可用于商业用途。</p>
 		</div>
 		
 		<script type="text/javascript">
