--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			.dataBox h1{
 				margin-bottom: 50px;
 			}
-			.dataBox p{
+			.dataBox .info{
 				position: absolute;
 				bottom: 10%;
 				text-align: center;
@@ -41,7 +41,11 @@
 			<h1>来疯数据</h1>
 			<input placeholder="请输入来疯号" id="u_id" />
 			<button onclick="toXHL()">跳转小葫芦查询</button>
-			<p>声明：该网页仅提供大家方便跳转到小葫芦，查询来疯数据。不可用于商业用途。</p>
+			<div class="info">
+				<p>声明：该网页由来疯·1990·整理，仅供大家方便跳转到小葫芦，查询来疯数据。不可用于商业用途。</p>
+				<br />
+				<p>若有侵权，请在github上或在来疯私信联系本人进行删除，谢谢。</p>
+			</div>
 		</div>
 		
 		<script type="text/javascript">
